--- a/app/jade/blog.jade
+++ b/app/jade/blog.jade
@@ -3,6 +3,9 @@ extends layouts/default
 include include/mixin
 
 block main
+
+  mixin headerActive('blog')
+
   .blog-page.p-t-70
     .banner
       h3.text-white.text-center Sapta Blog
