--- a/app/jade/include/header.jade
+++ b/app/jade/include/header.jade
@@ -13,7 +13,7 @@ div.navbar.navbar-fixed-top(role='navigation')
           include ../form/tour
 
         li
-          a(href='#flights')
+          a(href='flights.html')
             i.ico.ico-flight
             span.block BOOK FLIGHTS
 
