--- a/app/jade/tour-detail.jade
+++ b/app/jade/tour-detail.jade
@@ -4,6 +4,8 @@ include include/mixin
 
 block main
 
+  mixin headerActive('tours')
+
   .tour-detail-page.p-t-70
     .container.m-t-xl
       label.wrapper-lg.pad-b-n.text-light.text-u-c.block.text-center.text-yellow Europe
