--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -164,5 +164,35 @@
       height: 17px;
       background-position: -427px -14px;
     }
+
+    &-customer-service {
+      height: 64px;
+      width: 75px;
+      background-position: -95px -64px;
+    }
+
+    &-customer-service {
+      height: 64px;
+      width: 75px;
+      background-position: -95px -64px;
+    }
+
+    &-safe {
+      height: 65px;
+      width: 48px;
+      background-position: -212px -64px;
+    }
+
+    &-payment {
+      height: 50px;
+      width: 73px;
+      background-position: -313px -75px
+    }
+
+    &-tax {
+      width: 120px;
+      height: 53px;
+      background-position: -436px -77px
+    }
   }
 }
