--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -108,12 +108,24 @@
       width: 22px;
       height: 11px;
       background-position: -355px -20px;
+
+      &-lg {
+        width: 41px;
+        height: 15px;
+        background: url(../img/ico-departure-lg.png) no-repeat 0 0;
+      }
     }
 
     &-return {
       width: 19px;
       height: 15px;
       background-position: -393px -15px;
+
+      &-lg {
+        width: 35px;
+        height: 25px;
+        background: url(../img/ico-return-lg.png) no-repeat 0 0;
+      }
     }
 
     &-idea {
@@ -193,6 +205,30 @@
       width: 120px;
       height: 53px;
       background-position: -436px -77px
+    }
+
+    &-info {
+      width: 16px;
+      height: 16px;
+      background-position: -593px -16px;
+    }
+
+    &-check {
+      width: 16px;
+      height: 16px;
+      background-position: -569px -17px;
+    }
+
+    &-cross {
+      width: 16px;
+      height: 16px;
+      background-position: -544px -17px;
+    }
+
+    &-warn {
+      width: 14px;
+      height: 14px;
+      background-position: -517px -18px;
     }
   }
 }
