--- a/app/jade/flights.jade
+++ b/app/jade/flights.jade
@@ -14,7 +14,7 @@ block main
 
       .flight-lists.row
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Bromo.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -28,7 +28,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Tokyo.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -42,7 +42,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Bali01.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -55,7 +55,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Malaysia.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -69,7 +69,7 @@ block main
 
       .flight-lists.row
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Bromo.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -83,7 +83,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Tokyo.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -97,7 +97,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Bali01.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -110,7 +110,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Malaysia.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -124,7 +124,7 @@ block main
 
       .flight-lists.row
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Bromo.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -138,7 +138,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Tokyo.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -152,7 +152,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Bali01.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
@@ -165,7 +165,7 @@ block main
               span.block.flight-class Economy Return
 
         .col-md-3.item
-          a.block.pos-rlt(href="#")
+          a.block.pos-rlt(href="flight-outbound.html")
             img(src="img/destinations/Malaysia.jpg", alt="")
             span.block.text-u-c.pricing.bg-orange.pos-abt
               span.block From
