--- a/app/less/web/flights.less
+++ b/app/less/web/flights.less
@@ -2,6 +2,10 @@
   .head-title {
     color: #4c4c4c;
     font-size: 30px;
+
+    &.text-white {
+      color: #fff;
+    }
   }
 
   .flight-lists {
@@ -96,6 +100,261 @@
       font-family: "Gotham Black";
       font-size: 13px;
       line-height: 21px;
+    }
+  }
+}
+
+
+.outbond-flight-list,
+#selectedFlights {
+  .flight-item {
+    background: #fff;
+    -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+    box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+    height: 78px;
+
+    .column {
+      height: 78px;
+      border-color: #d8d8d8;
+
+      label {
+        font-size: 11px;
+        margin-bottom: 0;
+        font-family: "Gotham Black";
+        color: #888;
+      }
+
+      .light {
+        font-family: "Gotham Book";
+        font-size: 11px;
+        font-weight: 200;
+        color: #888;
+      }
+    }
+
+    > .arline {
+      padding-top: 13px;
+      width: 95px;
+      text-align: center;
+
+      img {
+        max-width: 30px;
+        max-height: 30px;
+      }
+    }
+
+    > .schedule {
+      width: 425px;
+      background: url(../img/bg-shedule-departure.png) no-repeat center left;
+
+      .departure.pos-rlt,
+      .return.pos-rlt {
+        height: 78px;
+        padding-left: 45px;
+
+        .ico {
+          position: absolute;
+          top: 35px;
+          left: 15px;
+
+          &-return {
+            top: 29px;
+          }
+        }
+
+        .time {
+          margin-top: 15px;
+          font-size: 11px;
+        }
+        .date {
+          font-size: 13px;
+
+          strong {
+            font-family: "Gotham Black"
+          }
+        }
+      }
+
+      .return.pos-rlt {
+        padding-left: 40px;
+        width: 182px;
+      }
+
+      .arrow {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 187px;
+        background: url(../img/arrow-thin-medium.png) no-repeat center 0;
+        width: 26px;
+        height: 78px;
+        z-index: 0;
+      }
+
+      .duration {
+        left: 178px;
+        top: 50%;
+        margin-top: -12.5px;
+        position: absolute;
+        width: 60px;
+        text-align: center;
+        font-family: "Gotham Black";
+        font-size: 11px;
+        color: #000;
+        height: 25px;
+        line-height: 25px;
+        display: block;
+        border-radius: 2px;
+        #gradient > .vertical(#f4f4f4, #fff);
+        font-family: "Gotham Black";
+        -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 1px rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    > .transit {
+      width: 130px;
+      padding-left: 23px;
+
+      label {
+        margin-top: 25px;
+      }
+
+      .ico {
+        top: 45px;
+        margin-top: -13px;
+        right: 15px;
+      }
+    }
+
+    > .pricing {
+      width: 160px;
+      padding-left: 23px;
+      background: #f8f8f8;
+      color: #158ea3;
+      padding-top: 14px;
+
+      .price,
+      .currency {
+        font-family: "Gotham Black";
+        font-size: 18px;
+        line-height: 15px;
+        vertical-align: top;
+      }
+
+      .currency {
+        font-size: 13px;
+        margin-top: -2px;
+        margin-right: 3px;
+      }
+    }
+
+    > .button {
+      font-family: "Gotham Black";
+      width: 130px;
+      line-height: 78px;
+      background: #158ea3;
+      text-shadow: 1px 2px 0px #006678;
+      a {
+        color: #fff;
+        font-size: 13.89px;
+        letter-spacing: 0.9px;
+      }
+    }
+  }
+}
+
+#selectedFlights {
+  background: #fcaf56;
+  padding: 55px;
+
+  .isBlock {
+    border: 1px solid #d8d8d8;
+    -webkit-box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.1);
+  }
+
+  .flight-item {
+    background: #fff;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    height: 78px;
+
+    .flight-class {
+      width: 130px;
+      height: 77px;
+      text-align: center;
+
+      label {
+        margin-top: 23px;
+      }
+    }
+  }
+
+  .select-departure-flight {
+    .b-b;
+
+    .schedule {
+      height: 77px;
+    }
+  }
+
+  .book-now-flights {
+    height: 156px;
+    .b-l;
+    width: 158px;
+    background: #fff;
+    padding-left: 23px;
+
+    > .pricing {
+      padding-top: 25px;
+      padding-top: 14px;
+
+      label {
+        font-size: 11px;
+        margin-bottom: 0;
+        font-family: "Gotham Black";
+        color: #888;
+
+        &.light {
+          font-family: "Gotham Book";
+          font-size: 11px;
+          font-weight: 200;
+          color: #888;
+        }
+      }
+
+      .price,
+      .currency {
+        color: #158ea3;
+        font-family: "Gotham Black";
+        font-size: 18px;
+        line-height: 15px;
+        vertical-align: top;
+      }
+
+      .currency {
+        font-size: 13px;
+        margin-top: -2px;
+        margin-right: 3px;
+      }
+    }
+
+    .btn-primary {
+      padding: 10px 15px;
+      -webkit-box-shadow:0px -2px 0px 0px #53aebd;
+      box-shadow:0px -2px 0px 0px #53aebd;
+
+      &:hover {
+        border-color: #158ea3;
+      }
+
+      &:active,
+      &:focus {
+        border-color: #158ea3;
+        -webkit-box-shadow:0px -2px 0px 0px #0f6776;
+        box-shadow:0px -2px 0px 0px #0f6776;
+      }
     }
   }
 }
